tests/language/implicit_downcast_during/for_initializer_expression_test.dart
// Copyright (c) 2017, the Dart project authors.  Please see the AUTHORS file
// for details. All rights reserved. Use of this source code is governed by a
// BSD-style license that can be found in the LICENSE file.

void main() {
  Object b = 0;
  int i;
  for (i = b; i < 1; i++) {}
  //       ^
  // [analyzer] COMPILE_TIME_ERROR.INVALID_ASSIGNMENT
  // [cfe] A value of type 'Object' can't be assigned to a variable of type 'int'.
}
